--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,3 +120,9 @@
     @apply bg-background text-foreground;
   }
 }
+
+@layer components {
+  .section {
+    @apply max-w-7xl mx-auto px-4 my-6 py-6 md:my-8 md:py-8;
+  }
+}
